# NeuralViz

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NeuralViz.sln  NeuralViz.vcxproj  NeuralViz.vcxproj.filters  README.md  build.sh
docs/: book.toml
neuralviz/: CMakeLists.txt
neuralviz/src/: neuralviz.cpp  neuralviz.h
res/gui/: MainWindow.ui
res/swc_files/: sample_0.swc
src/: Main.cpp  neuralviz.cpp
src/Core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h
src/GUI/: MainUI.cpp  MainUI.h  MainView.cpp  MainView.h
src/Morpho/: Neuron.cpp  Neuron.h  Node.cpp  Node.h
src/SWC/: SwcReader.cpp  SwcReader.h
src/Utils/: Vec3.h
